Fix addresses we announce via Identify
If we are listening on a wildcard address we need to expand it,
and find all the matching interfaces and their ip addresses.

Add a test to verify this to EmbeddedIpfsTest